name:                render-document
version:             0.1.0.0
synopsis:            An example application for learning purposes.
description:         Please see README.md
homepage:            https://github.com/dgendill/render-document
license:             MIT
license-file:        LICENSE
author:              Dominick Gendill
copyright:           2017 Dominick Gendill
category:            Learning
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

Flag Testing
  Description: Optimize for testing
  Default: False

executable render-document-example
  hs-source-dirs:      src
  main-is:             Main.hs

  if flag(testing)
    buildable: False

  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5

library
  hs-source-dirs:      src
  exposed-modules:     Document, Parser
  other-modules:       State
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , trifecta
                     , raw-strings-qq

test-suite render-document-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Main.hs
  build-depends:       base
                     , render-document
                     , trifecta
                     , hspec
                     , QuickCheck
                     , checkers
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
